# FlightLog

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  assert_policy.yml.example  audit.yml.example  flight_log_mcp_capture_plan_git_hub_issues_acceptance_criteria.md  pyproject.toml  redaction.yml.example  replay_pack_mcp_capture_plan_git_hub_issues_acceptance_criteria.md
docs/: event_schema.md  releasing.md  roadmap.md  schema_versioning.md
examples/: README.md  fake_mcp_server.py  sample_claude_session.jsonl  sample_mcp_transcript.jsonl
flightlog/: __init__.py  assert_gate.py  audit_export.py  cli.py  diff_viewer.py  models.py  normalize.py  pack_compare.py  pack_io.py  pack_writer.py  redaction.py  replay_runner.py  schema_version.py  signing.py  watch.py
replaypack/: __init__.py  cli.py  diff_viewer.py  json_utils.py  models.py  normalize.py  pack_io.py  pack_writer.py  redaction.py  replay_runner.py  schema_version.py
tests/: test_audit_export.py  test_cli_pack.py  test_docs_smoke.py  test_ingest_claude.py  test_ingest_generic.py  test_ingest_http_capture.py  test_llm_anthropic.py  test_llm_event_schema.py  test_llm_gemini.py  test_llm_openai_compat.py  test_llm_proxy.py  test_llm_turn.py  test_mcp_discovery.py  test_mcp_models_stubgen.py  test_mcp_proxy_http.py  test_mcp_proxy_streaming_sse.py  test_mcp_stub_sequence.py  test_mcp_stub_server.py  test_mcp_wrap_stdio.py  test_models.py  test_normalize_diffs.py  test_otel_span_capture.py  test_pack_compare_assert.py  test_pack_diff_cli.py  test_pack_validate.py  test_pack_validate_cli.py  (+8 more)
(+73 files in other folders)
